# bitpack-project

./: .gitignore  README.md  REPORT.md  bench_aligned_uniform_k12.csv  bench_crossing_uniform_k12.csv  bench_overflow_skewed.csv  make_data.py  make_tiny.py  pyproject.toml  validation_aligned_uniform.md  validation_crossing.md  validation_overflow_skewed.md
bitpack/: aligned.py  base.py  cli.py  core.py  crossing.py  factory.py  header.py  overflow.py  scenarios.py  timing.py  validate.py
tests/: test_aligned.py  test_core.py  test_crossing.py  test_overflow.py  test_serialization.py
